WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236690
RemoteVideoFrameProxy is missing reference field encode, decode
https://bugs.webkit.org/show_bug.cgi?id=236690
Summary
RemoteVideoFrameProxy is missing reference field encode, decode
Kimmo Kinnunen
Reported
2022-02-15 22:28:08 PST
RemoteVideoFrameProxy is missing reference field encode, decode
Attachments
Patch
(3.80 KB, patch)
2022-02-15 22:49 PST
,
Kimmo Kinnunen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(5.72 KB, patch)
2022-02-15 23:47 PST
,
Kimmo Kinnunen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.21 KB, patch)
2022-02-15 23:51 PST
,
Kimmo Kinnunen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.09 KB, patch)
2022-02-16 00:00 PST
,
Kimmo Kinnunen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.77 KB, patch)
2022-02-16 00:45 PST
,
Kimmo Kinnunen
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.14 KB, patch)
2022-02-16 01:57 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.17 KB, patch)
2022-02-16 04:32 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-02-15 22:49:03 PST
Created
attachment 452147
[details]
Patch
Kimmo Kinnunen
Comment 2
2022-02-15 23:47:10 PST
Created
attachment 452150
[details]
Patch
Kimmo Kinnunen
Comment 3
2022-02-15 23:51:54 PST
Created
attachment 452151
[details]
Patch
Kimmo Kinnunen
Comment 4
2022-02-16 00:00:08 PST
Created
attachment 452152
[details]
Patch
Kimmo Kinnunen
Comment 5
2022-02-16 00:45:00 PST
Created
attachment 452155
[details]
Patch
Kimmo Kinnunen
Comment 6
2022-02-16 01:57:00 PST
Created
attachment 452162
[details]
Patch
Antti Koivisto
Comment 7
2022-02-16 02:06:47 PST
Comment on
attachment 452162
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=452162&action=review
r=me when/if it compiles
> Source/WTF/ChangeLog:7 > + Reviewed by NOBODY (OOPS!). > + Export the MediaTime TextStream operator<< as inline function
missing empty line
Kimmo Kinnunen
Comment 8
2022-02-16 04:32:48 PST
Created
attachment 452182
[details]
Patch for landing
EWS
Comment 9
2022-02-16 08:56:08 PST
Committed
r289891
(
247329@main
): <
https://commits.webkit.org/247329@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452182
[details]
.
Radar WebKit Bug Importer
Comment 10
2022-02-16 08:57:18 PST
<
rdar://problem/89028319
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug