RemoteVideoFrameProxy is missing reference field encode, decode https://bugs.webkit.org/show_bug.cgi?id=236690

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-16
Reviewed by Antti Koivisto.

Source/WebKit:

Add the missing encode, decode. Use the better decode pattern
to avoid default construction and reduce the chance of having
a declaration but no decode.
Also add TextStream operator<< for RemoteVideoFrameProxy::Properties
for easier debugging with WebKit2Logging IPCMessages.

No new tests, tested by existing WebRTC tests
when WebRTCRemoteVideoFrameEnabled=true (not default currently)

* WebProcess/GPU/media/RemoteVideoFrameProxy.cpp:
(WebKit::operator<<):
* WebProcess/GPU/media/RemoteVideoFrameProxy.h:
(WebKit::RemoteVideoFrameProxy::Properties::encode const):
(WebKit::RemoteVideoFrameProxy::Properties::decode):

Source/WTF:

Export the MediaTime TextStream operator<< as inline function
for all compilation modes. It is useful also when NDEBUG is defined,
and it is hard to ifdef at all the call sites.

* wtf/MediaTime.cpp:
* wtf/MediaTime.h:


Canonical link: https://commits.webkit.org/247329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289891 268f45cc-cd09-0410-ab3c-d52691b4dbfc